# cordova-plugin-lsl

./: .editorconfig  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  plugin.xml
.claude/: CLAUDE.md  done-config.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-android.yml  build-ios.yml  ci.yml
docs/: API-REFERENCE.md  BUILD-FROM-SOURCE.md  DEVLOG.md  KNOWN-PEERS-SETUP.md  LSL-REVIEW-REPORT.md  PROTOCOL.md  STATE.md  TESTING-GUIDE.md
docs/LSL-DOCUMENTATION/: 00-index.md  01-introduction.md  02-quick-start.md  03-user-guide.md  04-lsl-api-cfg.md  05-network-troubleshooting.md  06-time-synchronization.md  07-faqs.md  08-supported-devices.md  09-language-wrappers.md  10-viewers.md  11-dev-guide.md  12-app-dev.md  13-app-build.md  14-build-android.md  15-coding-examples.md  16-library-development.md
examples/: eda-stream.js  emg-stream.js  multi-sensor.js  pulse-stream.js  respiration-stream.js  temperature-stream.js
scripts/: build-android.sh  build-ios.sh  run-tests.sh
src/android/: LSLOutletWrapper.java  LSLPlugin.java  build-extras.gradle
src/android/jni/: CMakeLists.txt  lsl_jni.c
src/ios/: LSLPlugin.h  LSLPlugin.m
tests/: jasmine.json
tests/e2e/: test-esense-streams.md  test-labrecorder.md
tests/helpers/: _cordova-exec-mock.js  mock-cordova.js
tests/integration/: test-error-handling.js  test-multi-outlet.js  test-outlet-lifecycle.js
tests/js/: test-api-validation.js  test-exec-calls.js  test-promise-handling.js
www/: lsl.d.ts  lsl.js
(+13 files in other folders)
